# sunflower

./: .gitmodules  README.md  lexer.l  meson.build  sunflower.c
src/: compile.c  compile.h  hashtable.c  hashtable.h  lex.c  lex.h  lexer.c  mir.c  mir.h  parse.c  parse.h
tests/: compile_tests.c  hashtable_tests.c  lex_tests.c  lextests.c  mir_tests.c  parse_tests.c  tests.c
